Gotta fix a bug with the 'List' section in the header. Words goes out of bounds. Added in the main content area.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -157,7 +157,6 @@ html, body {
             }
         }
         .show-list-box {
-            width: 200px;
             display: block;
             padding: 10px 20px;
             background: white;
@@ -170,7 +169,6 @@ html, body {
                 margin: 0;
             }
             .list {
-                width: auto;
                 border-bottom: 1px solid #3d3d3d;
                 margin: 5px 0px;
             }
@@ -242,7 +240,7 @@ html, body {
         }
     }
 }
-    .main-content-area {
-
+    .main-content-section {
+        color: #3d3d3d;
     }
 }
